--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,9 @@ pygmentsstyle = "vs"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
+# Your Disqus sortname.
+disqusShortname = "khoiprodotcom"
+
 # Number of posts to show in recent posts list (Optional). Defaults to 10.
 paginate = 10
 
