Add policy page

--- a/config.toml
+++ b/config.toml
@@ -44,6 +44,11 @@ name = "Tags"
 url = "/tags"
 weight = 4
 
+[[menu.main]]
+name = "Policy"
+url = "/policy"
+weight = 5
+
 [[params.social]]
 name = "Github"
 icon = "github"
